welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: '=' expected but ';' found.
var d
^close10:5: error: '=' expected but ';' found.
c = Math.abs(10-a)
^